@@ -1,9 +1,9 @@
-b64fd66744930caaebfc58dcee063fa5 *DESCRIPTION
+0b53ce97a2d1334c59a5116a81cdfd0c *DESCRIPTION
 f13dd79196887d319fc552a321596f5d *LICENSE
 3247472e170f6b34c08daab2d63e5e47 *NAMESPACE
 544ada155164636207236f46922df7e0 *R/SGP-class.R
-3b55a0a1aa69699ec550dc17eb5b0990 *R/abcSGP.R
-a6db590e70e2a2c20acc1e1590e7a219 *R/analyzeSGP.R
+0abfc5f07288000da84996c8f5214be2 *R/abcSGP.R
+72a1a8e9c0544a25f761f0e4ff5c6dec *R/analyzeSGP.R
 40826b84c49e156b72195d36f8f767fe *R/baselineSGP.R
 8e7afd2aaab8374cfa6150e7fbbdfec5 *R/baselineSGPshort.R
 1b85aa6991498b9071d656d40d8da94c *R/bubblePlot.R
@@ -12,7 +12,7 @@ b61d2b47e42e0e910ba0f9a787a69a02 *R/bubblePlot_Styles.R
 00d6bb64c4f58b76e17a3d47b21443fb *R/growthAchievementPlot.R
 3f9d12dd95adcad8e30e2247d49c9aac *R/is.SGP.R
 945753005a68d647b8e77f4d47a84041 *R/outputSGP.R
-429832bb4eda41fbfb3ade6e9484ed64 *R/prepareSGP.R
+ca4c1d3df2a8f06bb030057e7b72eee9 *R/prepareSGP.R
 2fd8a080aee35af3d5deb00dc994232d *R/splineMatrix-class.R
 ecfd2b029d84fb9184e2f4bdacdba61a *R/studentGrowthPercentiles.R
 6287e0f4f4ead97f1b39302e6299b005 *R/studentGrowthPlot.R
@@ -24,12 +24,12 @@ cecac1904c79547f8cccd78c028e8695 *R/studentGrowthPlot_Styles.R
 a092804f4de2803ad00a10f64cf83ab1 *data/datalist
 255bf6a57db438a329d71fcf7204350a *data/sgpData.rda
 0dcaa820d64bd6dbe12df9ffb4fc6bcd *data/sgpData_LONG.rda
-06dd3f838a667b22049b71b4b5a084c5 *data/stateData.rda
-919b2f120be5257d80f1d759b6edccfd *inst/CITATION
-d301413bd4629407fc3bbb7337844a76 *inst/NEWS
+dc0c312c33b0ee40c5e7479bc7a782a1 *data/stateData.rda
+10f0eb86278be26168f48cfd18b11dde *inst/CITATION
+82431c5bad1f7088aed044802caed890 *inst/NEWS
 99ea0f9ec9684dddedfce27e4d440cee *inst/doc/sgpPrimer.pdf
 299c204e5e10d7ea4e579b8f70a1f4fd *man/SGP-class.Rd
-e4d8591d16e7acfaebd8e1ff37ef0d5d *man/SGP-package.Rd
+bd7a6b9432c99a934c06808dc4849a84 *man/SGP-package.Rd
 ce0476ae8ba5a42fdccea102e6c1fca0 *man/abcSGP.Rd
 23dabdb41cd1530eb2d5c5616f4fd9f9 *man/analyzeSGP.Rd
 fae601f2876e67ea794ab5936d9e0fb5 *man/baselineSGP.Rd
